<?xml version="1.0"?>
<package format="2">
  <name>ds_visualization</name>
  <version>0.0.0</version>
  <description>
    Tools to visualize custom Dataspeed messages
  </description>
  <maintainer email="mradovnikovich@dataspeedinc.com">Micho Radovnikovich</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>ds_av_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
